welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:1: error: Missing closing brace `}' assumed here
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
^